# valence-coprocessor-ethereum

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: check-ci.yml  crate2nix.yml  main.yml  nix-check.yml
assets/: proof-long.json  proof-short.json
crates/core/: Cargo.toml
crates/core/src/: circuit.rs  controller.rs  lib.rs
crates/core/tests/: e2e.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/lightclient/builder/: Cargo.toml  build.rs
crates/lightclient/builder/src/: lib.rs  main.rs
crates/lightclient/circuit/: Cargo.toml
crates/lightclient/circuit/src/: main.rs
crates/lightclient/elf/: controller.wasm  id  valence-coprocessor-ethereum-service-circuit  valence-coprocessor-ethereum-service-vk  wrapper-bytes32
crates/lightclient/lib/: Cargo.toml
crates/lightclient/lib/assets/: input.json  state.json
crates/lightclient/lib/src/: history.rs  integrator.rs  lib.rs  prover.rs  state.rs  types.rs  verifier.rs
crates/lightclient/service/: Cargo.toml
crates/lightclient/service/src/: api.rs  main.rs  provider.rs
crates/lightclient/wrapper/: Cargo.toml
crates/lightclient/wrapper/src/: main.rs
