[workspace]
members = ["crates/core", "crates/domain"]
resolver = "2"

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.4.2"

[workspace.dependencies]
alloy-primitives = { version = "1.2.1", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false, features = [
  "derive",
] }
alloy-rpc-types-eth = { version = "1.0.17", default-features = false, features = [
  "serde",
] }
alloy-serde = { version = "1.0.17", default-features = false }
alloy-sol-types = { version = "1.2.1", default-features = false, features = [
  "eip712-serde",
] }
alloy-trie = { version = "0.9.0", default-features = false, features = [
  "ethereum",
  "serde",
] }
anyhow = { version = "1.0.83", default-features = false }
bincode = { version = "2.0.1", default-features = false, features = [
  "alloc",
  "serde",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
msgpacker = { version = "0.4.8", default-features = false, features = [
  "alloc",
  "derive",
] }
rlp = { version = "0.6.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.4", default-features = false }
valence-coprocessor-wasm = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.4", default-features = false }
