[workspace]
members = [
  "crates/core",
  "crates/domain",
  "crates/lightclient/circuit",
  "crates/lightclient/service",
]
resolver = "2"

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
alloy-primitives = { version = "0.8.15", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false, features = [
  "derive",
] }
alloy-rpc-types-eth = { version = "0.9.2", default-features = false, features = [
  "serde",
] }
alloy-serde = { version = "0.9.2", default-features = false }
alloy-sol-types = { version = "0.8.15", default-features = false, features = [
  "eip712-serde",
] }
alloy-trie = { version = "0.7.8", default-features = false, features = [
  "ethereum",
  "serde",
] }
anyhow = { version = "1.0.83", default-features = false }
bincode = { version = "2.0.1", default-features = false, features = [
  "alloc",
  "serde",
] }
clap = { version = "4.5.37", features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
msgpacker = { version = "0.4.8", default-features = false, features = [
  "alloc",
  "derive",
] }
poem = { version = "3.1.9", features = ["anyhow"] }
poem-openapi = { version = "5.1.13", features = ["swagger-ui"] }
reqwest = { version = "0.12.15", features = ["json"] }
rlp = { version = "0.6.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "env-filter",
] }
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.8", default-features = false }
valence-coprocessor-prover = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.8", default-features = false }
valence-coprocessor-wasm = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.8", default-features = false }
