[workspace]
members = [
  "crates/core",
  "crates/domain",
  "crates/lightclient/builder",
  "crates/lightclient/circuit",
  "crates/lightclient/lib",
  "crates/lightclient/service",
  "crates/lightclient/wrapper",
]
resolver = "2"
default-members = [
  "crates/core",
  "crates/domain",
  "crates/lightclient/lib",
  "crates/lightclient/service",
]

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "1.0.0"

[workspace.dependencies]
alloy-primitives = { version = "0.8.15", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false, features = [
  "derive",
] }
alloy-rpc-types-eth = { version = "0.9.2", default-features = false, features = [
  "serde",
] }
alloy-serde = { version = "0.9.2", default-features = false }
alloy-sol-types = { version = "0.8.15", default-features = false, features = [
  "eip712-serde",
] }
alloy-trie = { version = "0.7.8", default-features = false, features = [
  "ethereum",
  "serde",
] }
anyhow = { version = "1.0.83", default-features = false }
bincode = { version = "2.0.1", default-features = false, features = [
  "alloc",
  "serde",
] }
clap = { version = "4.5.37", features = ["derive"] }
helios = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
msgpacker = { version = "0.4.8", default-features = false, features = [
  "alloc",
  "derive",
] }
poem = { version = "3.1.9", features = ["anyhow"] }
poem-openapi = { version = "5.1.13", features = ["swagger-ui"] }
reqwest = { version = "0.12.15", features = ["json"] }
rlp = { version = "0.6.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0", default-features = false, features = [
  "oid",
] }
sp1-build = "5.0.8"
sp1-sdk = "5.0.8"
sp1-verifier = { version = "5.0.8", default-features = false }
sp1-zkvm = { version = "5.0.8", features = ["verify"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "env-filter",
] }
tree_hash = "0.9.0"
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.12", default-features = false }
valence-coprocessor-client = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.12", default-features = false }
valence-coprocessor-prover = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.12", default-features = false }
valence-coprocessor-wasm = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.12", default-features = false }
zerocopy = "0.8.26"

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0-v2" }
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
