[package]
name = "valence-coprocessor-ethereum-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor domain definition."

[dependencies]
anyhow.workspace = true
msgpacker.workspace = true
serde_json.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true

valence-coprocessor-ethereum-lightclient = { path = "../lightclient/lib", default-features = false, features = [
  "verifier",
] }
valence-coprocessor-ethereum = { path = "../core", default-features = false, features = [
  "controller",
] }
