[package]
name = "valence-coprocessor-ethereum-lightclient-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor domain definition."

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
valence-domain-clients.workspace = true
valence-coprocessor-ethereum.path = "../../core"
valence-coprocessor-ethereum-lightclient.path = "../lib"

[build-dependencies]
hex.workspace = true
sp1-build.workspace = true
sp1-sdk.workspace = true
valence-coprocessor.workspace = true
zerocopy.workspace = true
