[package]
name = "valence-coprocessor-ethereum-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor domain definition."

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
clap.workspace = true
poem.workspace = true
poem-openapi.workspace = true
postcard = { version = "1.1.2", features = ["alloc"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sp1-sdk = "5.0.8"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-ethereum.path = "../../core"
valence-coprocessor-prover.workspace = true
