[package]
name = "valence-coprocessor-ethereum-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor domain definition."

[dependencies]
anyhow.workspace = true
clap.workspace = true
helios-consensus-core.workspace = true
hex.workspace = true
msgpacker.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
valence-domain-clients.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-ethereum-lightclient.path = "../lib"
valence-coprocessor-prover.workspace = true
